// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be removed 1`] = `
<div
  className="flex content-stack__content content transition-transform translate-x-full"
>
  <div
    className="pr-block-blocks-list flex flex-1 flex-col max-w-full overflow-auto"
  />
</div>
`;

exports[`should be removed 2`] = `
<div
  className="flex content-stack__content content transition-transform translate-x-full"
>
  <div
    className="pr-block-blocks-list flex flex-1 flex-col max-w-full overflow-auto"
  />
</div>
`;

exports[`should render with blocks 1`] = `
<div
  className="flex content-stack__content content transition-transform translate-x-full"
>
  <div
    className="pr-block-blocks-list flex flex-1 flex-col max-w-full overflow-auto"
  >
    <div
      className="pr-block-blocks-list__block pr-block-blocks-list__block--0 flex flex-1 content__block-container block-container snap-start max-h-full"
    />
  </div>
</div>
`;

exports[`should render with only a title 1`] = `
<div
  className="flex content-stack__content content transition-transform translate-x-full"
>
  <div
    className="pr-block-blocks-list flex flex-1 flex-col max-w-full overflow-auto"
  />
</div>
`;

exports[`should render with only a title 2`] = `
<div
  className="flex content-stack__content content transition-transform"
>
  <div
    className="pr-block-blocks-list flex flex-1 flex-col max-w-full overflow-auto"
  />
</div>
`;
